--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,33 +42,37 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        
     env:
-      DATABASE_URL: ${{DATABASE_URL}}
-      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}}
-      CLERK_SECRET_KEY: ${{CLERK_SECRET_KEY}}
-      CLERK_WEBHOOK_SECRET: ${{CLERK_WEBHOOK_SECRET}}
-      NEXT_PUBLIC_CLERK_SIGN_IN_URL: ${{NEXT_PUBLIC_CLERK_SIGN_IN_URL}}
-      NEXT_PUBLIC_CLERK_SIGN_UP_URL: ${{NEXT_PUBLIC_CLERK_SIGN_UP_URL}}
-      SUPER_ADMIN_EMAIL: ${{SUPER_ADMIN_EMAIL}}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+      CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
+      CLERK_WEBHOOK_SECRET: ${{ secrets.CLERK_WEBHOOK_SECRET }}
+      NEXT_PUBLIC_CLERK_SIGN_IN_URL: ${{ secrets.NEXT_PUBLIC_CLERK_SIGN_IN_URL }}
+      NEXT_PUBLIC_CLERK_SIGN_UP_URL: ${{ secrets.NEXT_PUBLIC_CLERK_SIGN_UP_URL }}
+      SUPER_ADMIN_EMAIL: ${{ secrets.SUPER_ADMIN_EMAIL }}
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+      - uses: actions/checkout@v4
+      
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          
+      - run: npm ci
+      
+      - run: npm run build --if-present
