--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -67,12 +67,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          
-      - run: npm ci
-      
-      - run: npm run build --if-present
+      - name: Install Bun
+        run: curl -fsSL https://bun.sh/install | bash
+
+      - name: Set up Bun
+        run: bun install
+        
+      - name: Build the project
+        run: bun run build --if-present
