--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -68,7 +68,10 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Bun
-        run: curl -fsSL https://bun.sh/install | bash
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          echo "Bun installed, adding to PATH"
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
       - name: Set up Bun
         run: bun install
