--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,8 +52,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [latest]  # Using only the latest Node.js version
         
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -73,8 +72,14 @@ jobs:
           echo "Bun installed, adding to PATH"
           echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
-      - name: Set up Bun
-        run: bun install
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'latest'  # Use the latest version of Node.js
+          
+      - name: Install dependencies
+        run: bun install  # Install dependencies using Bun
         
       - name: Build the project
-        run: bun run build --if-present
+        run: bun run build  # Run the build command without --if-present
+
