--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,85 +1,90 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-# name: Node.js CI
-
-# on:
-#   push:
-#     branches: ["develop"]
-#   pull_request:
-#     branches: ["develop"]
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     strategy:
-#       matrix:
-#         node-version: [18.x, 20.x, 22.x]
-        
-#     env:
-#       DATABASE_URL: ${{ DATABASE_URL }}
-#       NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
-#       CLERK_SECRET_KEY: ${{ CLERK_SECRET_KEY }}
-#       CLERK_WEBHOOK_SECRET: ${{ CLERK_WEBHOOK_SECRET }}
-#       NEXT_PUBLIC_CLERK_SIGN_IN_URL: ${{ NEXT_PUBLIC_CLERK_SIGN_IN_URL }}
-#       NEXT_PUBLIC_CLERK_SIGN_UP_URL: ${{ NEXT_PUBLIC_CLERK_SIGN_UP_URL }}
-#       SUPER_ADMIN_EMAIL: ${{ SUPER_ADMIN_EMAIL }}
-
-#     steps:
-#       - uses: actions/checkout@v4
-      
-#       - name: Install Bun
-#         run: curl -fsSL https://bun.sh/install | bash
-
-#       - name: Set up Bun
-#         run: bun install
-        
-#       - name: Build the project
-#         run: bun run build --if-present
-
-name: Node.js CI
+name: Next.js CI/CD
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main, develop ]
   pull_request:
-    branches: ["main"]
+    branches: [ main, develop ]
+
+env:
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+  CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
+  CLERK_WEBHOOK_SECRET: ${{ secrets.CLERK_WEBHOOK_SECRET }}
+  NEXT_PUBLIC_CLERK_SIGN_IN_URL: ${{ secrets.NEXT_PUBLIC_CLERK_SIGN_IN_URL }}
+  NEXT_PUBLIC_CLERK_SIGN_UP_URL: ${{ secrets.NEXT_PUBLIC_CLERK_SIGN_UP_URL }}
+  SUPER_ADMIN_EMAIL: ${{ secrets.SUPER_ADMIN_EMAIL }}
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [latest]  # Using only the latest Node.js version
-        
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
-      CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
-      CLERK_WEBHOOK_SECRET: ${{ secrets.CLERK_WEBHOOK_SECRET }}
-      NEXT_PUBLIC_CLERK_SIGN_IN_URL: ${{ secrets.NEXT_PUBLIC_CLERK_SIGN_IN_URL }}
-      NEXT_PUBLIC_CLERK_SIGN_UP_URL: ${{ secrets.NEXT_PUBLIC_CLERK_SIGN_UP_URL }}
-      SUPER_ADMIN_EMAIL: ${{ secrets.SUPER_ADMIN_EMAIL }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: 'latest'
+
+      - name: Install dependencies
+        run: bun install
+
+      - name: Lint
+        run: bun lint
+
+      - name: Type check
+        run: bun run type-check
+
+      - name: Run tests
+        run: bun test
+        env:
+          CI: true
+
+      - name: Build
+        run: bun run build
+        env:
+          NEXT_TELEMETRY_DISABLED: 1
+
+      - name: Cache build output
+        uses: actions/cache@v3
+        with:
+          path: |
+            .next/cache
+            ${{ github.workspace }}/.next/static
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/bun.lockb') }}-${{ github.sha }}
+
+  deploy-staging:
+    needs: build-and-test
+    if: github.ref == 'refs/heads/development'
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install Bun
-        run: |
-          curl -fsSL https://bun.sh/install | bash
-          echo "Bun installed, adding to PATH"
-          echo "$HOME/.bun/bin" >> $GITHUB_PATH
+      - uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'latest'  # Use the latest version of Node.js
-          
-      - name: Install dependencies
-        run: bun install  # Install dependencies using Bun
-        
-      - name: Build the project
-        run: bun run build  # Run the build command without --if-present
+      - name: Deploy to Staging
+        run: |
+          bun i -g vercel
+          vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
+          vercel build --token=$VERCEL_TOKEN
+          vercel deploy --prebuilt --token=$VERCEL_TOKEN
+
+  deploy-production:
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Deploy to Production
+        run: |
+          bun i -g vercel
+          vercel pull --yes --environment=production --token=$VERCEL_TOKEN
+          vercel build --token=$VERCEL_TOKEN
+          vercel deploy --prebuilt --token=$VERCEL_TOKEN
+
 
