--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Next.js CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, development ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, development ]
 
 env:
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -34,7 +34,10 @@ jobs:
         run: bun install
 
       - name: Lint
-        run: bun lint
+        run: bun run lint
+
+      - name: Type check
+        run: bun run type-check
 
       - name: Run tests
         run: bun test
@@ -62,9 +65,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # Setup Node.js for Vercel CLI (Vercel CLI requires Node.js)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - name: Deploy to Staging
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
         run: |
-          bun i -g vercel
+          npm i -g vercel
           vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
           vercel build --token=$VERCEL_TOKEN
           vercel deploy --prebuilt --token=$VERCEL_TOKEN
@@ -77,11 +90,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Deploy to Production
-        run: |
-          bun i -g vercel
-          vercel pull --yes --environment=production --token=$VERCEL_TOKEN
-          vercel build --token=$VERCEL_TOKEN
-          vercel deploy --prebuilt --token=$VERCEL_TOKEN
+      # Setup Node.js for Vercel CLI (Vercel CLI requires Node.js)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
+      - name: Deploy to Production
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        run: |
+          npm i -g vercel
+          vercel pull --yes --environment=production --token=$VERCEL_TOKEN
+          vercel build --prod --token=$VERCEL_TOKEN
+          vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
 
