--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "bunx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "bunx prisma generate"
+    "postinstall": "bunx prisma generate",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.2.0",
