--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Next.js CI/CD
 
 on:
@@ -21,36 +18,35 @@ env:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
+      - uses: actions/checkout@v4  # Updated to v4
+      
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: 'latest'
-
+          
       - name: Install dependencies
         run: bun install
-
+        
       - name: Lint
         run: bun run lint
-
+        
       - name: Type check
         run: bun run type-check
-
+        
       - name: Run tests
         run: bun test
         env:
           CI: true
-
+          
       - name: Build
         run: bun run build
         env:
           NEXT_TELEMETRY_DISABLED: 1
-
+          
       - name: Cache build output
-        uses: actions/cache@v3
+        uses: actions/cache@v4  # Updated to v4
         with:
           path: |
             .next/cache
@@ -59,18 +55,16 @@ jobs:
 
   deploy-staging:
     needs: build-and-test
-    if: github.ref == 'refs/heads/development'
+    if: github.ref == 'refs/heads/develop'  # Changed from development to develop
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
-      # Setup Node.js for Vercel CLI (Vercel CLI requires Node.js)
+      - uses: actions/checkout@v4  # Updated to v4
+      
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4  # Updated to v4
         with:
           node-version: '20'
-
+          
       - name: Deploy to Staging
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
@@ -86,16 +80,14 @@ jobs:
     needs: build-and-test
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
-      # Setup Node.js for Vercel CLI (Vercel CLI requires Node.js)
+      - uses: actions/checkout@v4  # Updated to v4
+      
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4  # Updated to v4
         with:
           node-version: '20'
-
+          
       - name: Deploy to Production
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
@@ -106,4 +98,3 @@ jobs:
           vercel pull --yes --environment=production --token=$VERCEL_TOKEN
           vercel build --prod --token=$VERCEL_TOKEN
           vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
-
