--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -99,7 +99,7 @@ jobs:
 
   deploy-production:
     needs: build-and-test
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
